--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
-    <style>
-        /* CSS styles go here (provided in the next section) */
-    </style>
+      <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
