Add profile pictures to testimonials

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kundenstimmen</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="style.css">
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -23,8 +25,13 @@
                     <p class="testimonial-text">"Die Beratung war erstklassig und sehr transparent. Ich habe mich bei meiner Investition in Gold zu jeder Zeit sicher und gut aufgehoben gefühlt. Absolute Empfehlung!"</p>
                 </div>
                 <div class="testimonial-author">
-                    <p class="author-name">Maximilian H.</p>
-                    <p class="author-info">Privatinvestor, Zürich</p>
+                    <div class="author-avatar">
+                        <span>MH</span>
+                    </div>
+                    <div class="author-details">
+                        <p class="author-name">Maximilian H.</p>
+                        <p class="author-info">Privatinvestor, Zürich</p>
+                    </div>
                 </div>
             </div>
 
@@ -33,8 +40,13 @@
                     <p class="testimonial-text">"Rheingold hat den Prozess für den Kauf und die Lagerung von Edelmetallen unglaublich einfach gemacht. Der Service ist professionell, diskret und hocheffizient."</p>
                 </div>
                 <div class="testimonial-author">
-                    <p class="author-name">Dr. Eva L.</p>
-                    <p class="author-info">Unternehmerin, Genf</p>
+                    <div class="author-avatar">
+                        <span>EL</span>
+                    </div>
+                    <div class="author-details">
+                        <p class="author-name">Dr. Eva L.</p>
+                        <p class="author-info">Unternehmerin, Genf</p>
+                    </div>
                 </div>
             </div>
 
@@ -43,8 +55,13 @@
                     <p class="testimonial-text">"Als langjähriger Kunde schätze ich die konstant hohe Servicequalität und die fundierte Marktkenntnis. Ein vertrauenswürdiger Partner in unruhigen Zeiten."</p>
                 </div>
                 <div class="testimonial-author">
-                    <p class="author-name">Stefan B.</p>
-                    <p class="author-info">Vermögensverwalter, Vaduz</p>
+                    <div class="author-avatar">
+                        <span>SB</span>
+                    </div>
+                    <div class="author-details">
+                        <p class="author-name">Stefan B.</p>
+                        <p class="author-info">Vermögensverwalter, Vaduz</p>
+                    </div>
                 </div>
             </div>
 
